--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
+    "mongoose": "^5.9.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
     "react": "^16.10.1",
