--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "apollo-server-express": "^2.10.1",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
