--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "apollo-boost": "^0.4.7",
     "apollo-server-express": "^2.10.1",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
+    "graphql": "^14.6.0",
     "html-webpack-plugin": "^3.2.0",
     "mongoose": "^5.9.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
     "react": "^16.10.1",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.2",
     "sass-loader": "^8.0.0",
