--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.2",
     "sass-loader": "^8.0.0",
+    "slate": "^0.57.1",
+    "slate-react": "^0.57.1",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.0",
     "webpack-dev-middleware": "^3.7.2"
