[ui] implement blog page
1. used search query to add id for blog
2. global styles for code and anchor tags

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ yarn.lock
 yarn-error.log
 dist/
 environment.js
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
