--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.2",
+    "react-use": "^13.26.4",
     "sass-loader": "^8.0.0",
     "slate": "^0.57.1",
     "slate-react": "^0.57.1",
