--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.9.1",
     "apollo-boost": "^0.4.7",
     "apollo-server-express": "^2.10.1",
     "babel-loader": "^8.0.6",
