--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.45",
     "apollo-boost": "^0.4.7",
     "apollo-server-express": "^2.10.1",
     "babel-loader": "^8.0.6",
