--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "formik": "^2.1.4",
+    "fs": "^0.0.1-security",
     "graphql": "^14.6.0",
     "html-webpack-plugin": "^3.2.0",
+    "https": "^1.0.0",
     "mongoose": "^5.9.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
