--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "graphql": "^14.6.0",
     "html-webpack-plugin": "^3.2.0",
     "https": "^1.0.0",
+    "jquery": "^3.4.1",
     "mongoose": "^5.9.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
