--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "apollo-server-express": "^2.10.1",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
+    "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^3.1.0",
     "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
@@ -41,6 +43,7 @@
     "slate": "^0.57.1",
     "slate-react": "^0.57.1",
     "style-loader": "^1.0.0",
+    "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.41.0",
     "webpack-dev-middleware": "^3.7.2"
   }
