--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "brotli-webpack-plugin": "^1.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.1.0",
     "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^3.2.0",
@@ -45,6 +46,7 @@
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.41.0",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-dev-middleware": "^3.7.2"
   }
 }
